fix text and x  button overlap if text is too long

--- a/src/inputx.less
+++ b/src/inputx.less
@@ -1,5 +1,8 @@
 .input-control {
 	position:relative;
+	input.clearable {
+		padding-right:24px;
+	}
 	.btn-clear {
 		position: absolute;
 		top: 50%;
@@ -8,8 +11,5 @@
 		color: gray;
 		display: block;
 		line-height: 1;
-		&:focus {
-			color:red;
-		}
 	}
 }
